Add /games endpoint to retrieve players in a game
