# api/openapi.yaml
@@ -82,6 +82,46 @@ paths:
       responses:
         '200':
           description: OK
+  /games/{id}/players:
+    get:
+      summary: Get players by game ID
+      description: 'Get a list of players for a specific game by ID.'
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Player'
+        '404':
+          description: Game not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error message
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error message
   /users:
     get:
       summary: Get a list of users
